# nestake

./: CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
resources/: README.md  read_test.nes
src/: CMakeLists.txt  console.cpp  console.hpp  cpu.cpp  cpu.hpp  ines.cpp  ines.hpp  memory.cpp  memory.hpp  ppu.cpp  ppu.hpp
src/internal/: CMakeLists.txt  cpu.cpp  cpu.hpp  memory.cpp  memory.hpp
test/: CMakeLists.txt  console_test.cpp  cpu_test.cpp  ines_test.cpp  ppu_test.cpp
test/internal/: CMakeLists.txt  cpu_test.cpp
